2012-01-02  Dan Bernstein  <mitz@apple.com>

        Fixed a typo I made in r103871.

        Fixes <http://webkit.org/b/75450> Inline PDF doesn't preview correctly when attempting to print its frame

        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::drawRectToPDF): Changed USE(GC) to USE(CG).

2012-01-02  Andy Estes  <aestes@apple.com>

        Fix the Windows build (again).

        * Platform/CoreIPC/Connection.h:

2012-01-02  Sam Weinig  <sam@webkit.org>

        Fix windows build.

        * Platform/CoreIPC/Connection.h:
        * Platform/CoreIPC/win/ConnectionWin.cpp:
        * Platform/RunLoop.h:
        Missing declarations/includes of BinarySemaphore.

2012-01-02  Sam Weinig  <sam@webkit.org>

        Move dispatchSentMessagesUntil out of the RunLoop class.
        https://bugs.webkit.org/show_bug.cgi?id=75320

        Reviewed by Dan Bernstein.

        * Platform/CoreIPC/Connection.cpp:
        (CoreIPC::Connection::SyncMessageState::waitWhileDispatchingSentWin32Messages):
        * Platform/CoreIPC/Connection.h:
        * Platform/CoreIPC/win/ConnectionWin.cpp:
        (CoreIPC::Connection::dispatchSentMessagesUntil):
        * Platform/win/RunLoopWin.cpp:

2012-01-02  Dan Bernstein  <mitz@apple.com>

        Build fix.

        * Platform/CoreIPC/mac/ConnectionMac.cpp:
        * Platform/mac/SharedMemoryMac.cpp:

2012-01-02  Nikolas Zimmermann  <nzimmermann@rim.com>

        Not reviewed. Fix build on Lion, by including mach_error.h in two places that need it.

        * PluginProcess/mac/PluginProcessMainMac.mm:
        * WebProcess/mac/WebProcessMainMac.mm:

2012-01-01  Dan Bernstein  <mitz@apple.com>

        EnvironmentUtilities::stripValuesEndingWithString enters an infinite loop if the search value
        occurs a component other than the first.

        Reviewed by Anders Carlsson.

        * Platform/unix/EnvironmentUtilities.cpp: